# torch-xpu-ops

./: .clang-format  .clang-tidy  .dmypy.json  .flake8  .gitignore  .lintrunner.toml  1.txt  1829.diff  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Copilot.md  LICENSE  README.md  a.py  a.txt  acc.txt  agent_results.xlsx  bench_ccl_prefill.cpp  benchdnn.txt  cases.txt  copilot-instructions.md  install_xpu.sh  lint.json  mypy-strict.ini  pyproject.toml  regression_cases.json  req.txt  review.md  run-clang-tidy-all.sh  run-clang-tidy-check.sh  run.sh  test.txt  todo.md  verification_report.md  verify_issues.sh  verify_phase1.sh  verify_phase2.sh  (+1 more)
src/: BuildOnLinux.cmake  BuildOnWindows.cmake  CMakeLists.txt  bridge.cpp
src/ATen/: CMakeLists.txt
src/ATen/native/cutlass/: Attention.cpp  Attention.h
src/ATen/native/nested/: NestedTensorTransformerFunctions.cpp
src/ATen/native/quantized/: AffineQuantizer.cpp  FakeQuantizeCore.cpp  FusedObsFakeQuant.cpp  MakePerTensorQuantizedTensor.cpp  QuantizedMaxPool2d.cpp
src/ATen/native/sparse/: SparseCsrTensor.cpp  SparseTensor.cpp  Utils.h
src/ATen/native/transformers/: Attention.cpp  SDPUtils.cpp  SDPUtils.h
src/ATen/native/xpu/: #Repro.cpp#  Activation.cpp  AdaptiveAveragePooling2d.cpp  AdaptiveAveragePooling3d.cpp  AdaptiveMaxPooling2d.cpp  AdaptiveMaxPooling3d.cpp  AiryAi.cpp  AmpKernels.cpp  AveragePool2d.cpp  AveragePool3d.cpp  BatchLinearAlgebra.cpp  BatchLinearAlgebra.cpp~  BatchNorm.cpp  Bessel.cpp  BinaryOps.cpp  Blas.cpp  Blas.h  Bucketization.cpp  Col2Im.cpp  CompareOps.cpp  Copy.cpp  Cross.cpp  DeformConv2d.cpp  DepthwiseConv2d.cpp  DepthwiseConv3d.cpp  DilatedMaxPool2d.cpp  DilatedMaxPool3d.cpp  Distance.cpp  (+116 more)
src/ATen/xpu/: EmptyTensor.cpp  EmptyTensor.h  Sleep.cpp  Sleep.h  XPUUtils.h
src/aten/: Activation.cpp  ActivationOps.cpp  AdaptiveAveragePooling2d.cpp  AmpKernels.cpp  AveragePool2d.cpp  BatchLinearAlgebra.cpp  BatchNorm.cpp  BinaryBitwiseOps.cpp  BinaryOps.cpp  Bucketization.cpp  CMakeLists.txt  Cat.cpp  Col2Im.cpp  CompareOps.cpp  Copy.cpp  Copy.h  DilatedMaxPool2d.cpp  Distance.cpp  Distribution.cpp  DistributionKernels.cpp  Distributions.cpp  Dropout.cpp  Embedding.cpp  EmbeddingBag.cpp  EmptyTensor.cpp  EmptyTensor.h  Fill.cpp  ForeachBinaryOpList.cpp  ForeachBinaryOpScalar.cpp  ForeachBinaryOpScalarList.cpp  ForeachOpList.cpp  ForeachOpScalar.cpp  ForeachOpScalarList.cpp  ForeachReduceOp.cpp  ForeachUnaryOp.cpp  GridSampler.cpp  GroupNorm.cpp  Im2Col.cpp  Im2ColShapeCheck.h  Indexing.cpp  (+41 more)
src/aten/sparse/: SparseCsrTensor.cpp  SparseTensor.cpp
src/aten/sycl/: ActivationEluKernel.cpp  ActivationGeluKernel.cpp  ActivationGeluKernel.h  ActivationGluKernel.cpp  ActivationGluKernel.h  ActivationHardsigmoidKernels.cpp  ActivationHardswishKernels.cpp  ActivationHardswishKernels.h  ActivationHardtanhKernels.cpp  ActivationLeakyReluKernel.cpp  ActivationLeakyReluKernels.h  ActivationOpsKernels.cpp  ActivationOpsKernels.h  ActivationSiluKernel.cpp  ActivationSiluKernel.h  ActivationSiluKernels.cpp  ActivationSiluKernels.h  ActivationThresholdKernel.cpp  ActivationThresholdKernel.h  AdaptiveAveragePooling2d.h  AdaptiveAveragePooling2dKernel.cpp  AdaptiveAveragePooling2dKernel.h  AdaptiveAveragePoolingKernels.cpp  AdaptiveAveragePoolingKernels.h  AmpKernels.cpp  Atomics.h  BatchKernel.h  BatchNormKernels.cpp  BatchNormKernels.h  BinaryBitwiseOpsKernels.cpp  BinaryBitwiseOpsKernels.h  BinaryDivTrueKernel.cpp  BinaryDivTruncKernel.cpp  BinaryGeometricKernels.cpp  BinaryGeometricKernels.h  BinaryInternal.h  BinaryKernels.cpp  BinaryKernels.h  BinaryMiscBackwardOpsKernels.cpp  BinaryMiscBackwardOpsKernels.h  (+173 more)
src/aten/temp_backup/: Activation.cpp  CompareOps.cpp  Copy.cpp  Dropout.cpp  Indexing.cpp  Pow.cpp  RangeFactories.cpp  Resize.cpp  TensorAdvancedIndexing.cpp  TensorCompare.cpp  XPUScalar.cpp
src/aten/transformers/: attention.cpp  sdp_utils.h
src/comm/: DeviceProperties.h  Macros.h  Memory.h  MemoryFormat.h  NumericUtils.h  Numerics.h  ReduceOpsUtils.h  RegisterUtils.h  Runtime.h  SYCLContext.h  SYCLHelpers.h  Scalar.h  TensorInfo.h  TensorOptions.h  XPUContext.h  XPUEvent.h  XPUGenBridge.h  XPUGuard.h  XPUMathCompat.h  XPUPair.h  sycl_id_queries_override.h  xpu_aten.h
src/hal/: XPUHal.cpp  XPUHal.h
src/xccl/: AllgatherGemmOps.cpp  AllgatherGemmOps.hpp  CMakeLists.txt  FlightRecorderXCCL.cpp  IPCExchange.hpp  ISHMEMSymmetricMemory.cpp  IpcExchange.hpp  NanCheck.cpp  NanCheck.hpp  NanCheck_XPU.cpp  NanCheck_XPU.hpp  ProcessGroupXCCL.cpp  ProcessGroupXCCL.hpp  ProcessGroupXCCLMonitor.cpp  ProcessGroupXCCLMonitor.hpp  ProcessGroupXCCL_v1.cpp  ProcessGroupXCCL_v1.hpp  ProcessGroupXCCL_v2.cpp  ProcessGroupXCCL_v2.hpp  Register.cpp  Signal.cpp  Signal.hpp  XCCLSymmetricMemory.cpp  XPUEventCache.cpp  XPUEventCache.hpp  XPUSHMEMSymmetricMemory.cu  XPUSymmetricMemory-inl.h  XPUSymmetricMemory.cpp  XPUSymmetricMemory.hpp  XPUSymmetricMemoryOps.cpp  XPUSymmetricMemoryTypes.hpp  XPUSymmetricMemoryUtils.cpp  XPUSymmetricMemoryUtils.hpp  allgather_gemm.hpp  gemm_reducescatter.hpp  reducer_xpu.cpp  sycl.hpp  xccl.cpp  xccl.h  xpushmem_extension.cpp  (+3 more)
src/xccl/ishmem/: CMakeLists.txt  ISHMEMSymmetricMemory.cpp
src/xccl/oneccl/: CMakeLists.txt  ONECCLSymmetricMemory.cpp
test/xpu/barrier/: CMakeLists.txt  barrier_impl_xpu.cpp  barrier_impl_xpu.hpp  barrier_perf_ut.cpp
test/xpu/csrc/: AllgatherPermuteFused.cpp  AllgatherPermuteIshmem.cpp  AllgatherWithSymmMem.cpp  CMakeLists.txt  EpCombine.cpp  EpCombineNoPermute.cpp  EpDispatch.cpp  EpDispatchNoPermute.cpp  LocalPermuteCopy.cpp  NotifyDispatch.cpp  Perf.md  README.md  RingAllgather.cpp  RingAllgatherIshmem.cpp  RingAllgatherIshmemwithIPC.cpp  RingAllgatherPermute.cpp  RingBuildRouting.cpp  RingReduceScatter.cpp  RingReduceScatterIshmem.cpp  RingReduceScatterUnpermute.cpp  RingReduceScatterUnpermuteTwoStage.cpp  RingReduceScatterUnpermute_store_repro.cpp  Topology.cpp  Topology.hpp  TopologyBindings.cpp  UnpermuteReduceScatter.cpp  buffer.hpp  build.py  ishmem_quiet_hang_repro.cpp  local_permute_copy.py  test.sh  test_ep_dispatch.py
(+2384 files in other folders)
